refactor(lint): add prettier and lint
