# src/libs/api/models/index.ts
@@ -3,7 +3,7 @@
  * Do not edit manually.
  */
 
-export * from "./tournament";
-export * from "./tournamentControllerFindAllParams";
-export * from "./tournamentResponseDto";
-export * from "./tournamentsResponseDto";
+export * from './tournament';
+export * from './tournamentControllerFindAllParams';
+export * from './tournamentResponseDto';
+export * from './tournamentsResponseDto';
